<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Si-PAUD</string>
    <string name="email_owner">wmufliana@gmail.com</string>
    <string name="tittle">Sistem Informasi Assesment Perkembangan Nilai Agama dan Budi Pekerti Anak Usia Dini</string>
    <string name="card_tittle">Belajar Menghitung</string>
    <string name="card_description" tools:ignore="TypographyEllipsis">Kegiatan ini dilakukan pada tanggal 20 Mei 2023...</string>
    <string name="hint_search">Cari Dokumen</string>
    <string name="filter">Filter berdasarkan :</string>
    <string name="filter_alphabet" tools:ignore="UnusedResources">A - Z</string>
    <string name="filter_news" tools:ignore="UnusedResources">Terbaru</string>
    <string name="filter_latest" tools:ignore="UnusedResources">Terlama</string>
    <string name="filter_favorite" tools:ignore="UnusedResources">Favorit</string>
    <string name="hint_tittle">Masukkan judul . . .</string>
    <string name="hint_description">Masukkan deskripsi narasi . . .</string>
    <string name="hint_activity_achievement">Tuliskan capaian kegiatan . . .</string>
    <string name="activity_achievement">Capaian kegiatan</string>
    <string name="feedback">Umpan Balik</string>
    <string name="hint_feedback">Masukkan umpan balik . . .</string>
    <string name="save">Simpan</string>
    <string name="logout">Keluar</string>
    <string name="translate">Pengaturan Bahasa</string>
    <string name="info">Informasi Aplikasi</string>
    <string name="add_student">Tambah Siswa</string>
    <string name="date_detail">Dibuat pada 08 Juni 2023</string>
    <string name="description_detail">Kirana mengambil benang wol warna jingga dan merah. Dia menarik benang wol panjang dan mengguntinya.</string>
    <string name="student_detail">Siswa dalam kegiatan</string>
    <string name="student_name" tools:ignore="UnusedResources">Alex</string>
    <string name="add_student_activity">Tambahkan siswa pada kegiatan</string>
    <string name="yes">Ya</string>
    <string name="no">Tidak</string>
    <string name="camera" tools:ignore="UnusedResources">Kamera</string>
    <string name="gallery" tools:ignore="UnusedResources">Gallery</string>
    <string name="choose_image" tools:ignore="UnusedResources">Pilih gambar</string>
    <string name="add_asesment">Tambah narasi</string>
    <string name="update_asesment">Ubah narasi</string>
    <string name="update_student">Ubah siswa</string>
    <string name="profile">Profil</string>
    <string name="student_bio" tools:ignore="UnusedResources">Biodata siswa</string>
    <string name="student_identity">Sistem informasi Assesment Perkembangan Nilai Agama Dan Budi Pekerti Anak Usia Dini</string>
    <string name="register">Daftar</string>
    <string name="register_message">Buat akun baru untuk masuk</string>
    <string name="have_account">Sudah punya akun?</string>
    <string name="not_have_account">Belum punya akun?</string>
    <string name="login">Masuk</string>
    <string name="welcome">Selamat datang</string>
    <string name="welcome_message">Ayo login dengan akun kamu</string>
    <string name="here">disini</string>
    <string name="wm">SIAP - AUD © 2024</string>
    <string name="hint_email">Masukkan email . . .</string>
    <string name="hint_password">Masukkan password . . .</string>
    <string name="hint_school">Masukkan nama sekolah . . .</string>
    <string name="hint_student">Masukkan nama siswa . . .</string>
    <string name="hint_group">Masukkan kelompok siswa . . .</string>
    <string name="skip">Lewati</string>
    <string name="finish">Selesai</string>
    <string name="tittle_first_onboarding">Nikmati Kemudahan Mencatat</string>
    <string name="subtittle_first_onboarding">Tidak perlu lagi repot membawa catatan fisik Anda dapat dengan mudah mencatat kegiatan harian Anda hanya dengan beberapa ketukan jari.</string>
    <string name="tittle_second_onboarding">Laporan Perkembangan Anak Lebih Menarik</string>
    <string name="subtittle_second_onboarding">Buat laporan kegiatan harian yang menarik dan informatif dengan menyertakan deskripsi, gambar, dan informasi tambahan.</string>
    <string name="tittle_third_onboarding">Simpan laporan siswa</string>
    <string name="subtittle_third_onboarding">Aplikasi kami memudahkan Anda menyimpan hasil laporan siswa selama satu bulan dalam bentuk pdf file</string>
    <string name="back">Kembali</string>
    <string name="warning_form">Semua kolom wajib diisi</string>
    <string name="hello_blank_fragment" tools:ignore="UnusedResources">Hello blank fragment</string>
    <string name="alert_tittle">Peringatan !!</string>
    <string name="alert_subtile_delete">Narasi akan dihapus secara permanen, apakah anda yakin ingin menghapus narasi ini? </string>
    <string name="info_app">SIAP - AUD adalah sebuah aplikasi untuk mendokumentasikan kegiatan siswa dengan membuat narasi kegiatan yang dilakukan, dan dapat dijadikan sebagai laporan kegiatan harian juga.</string>
    <string name="tutup" tools:ignore="UnusedResources">Tutup</string>
    <string name="pilih_bahasa">Pilih Bahasa</string>
    <string name="bahasa_indonesia">Bahasa Indonesia</string>
    <string name="english">English</string>
    <string name="alert_logout">Apakah Anda yakin ingin keluar dari akun</string>
    <string name="alert_confirm">Konfirmasi</string>
    <string name="alert_delete" tools:ignore="UnusedResources">Apakah Anda yakin ingin menghapus data yang dipilih ?</string>
    <string name="alert_update">Apakah Anda yakin ingin melakukan perubahan data ini?</string>
    <string name="alert_delete_1" tools:ignore="UnusedResources">Apakah Anda yakin ingin menghapus data ini?</string>
    <string name="not_found">Data tidak tersedia</string>
    <string name="indicator_value_pekerti">Indicator Penilaian Budi Pekerti</string>
    <string name="indicator_value_agama">Indicator Penilaian Agama</string>
    <string name="indicator_value_moral">Indicator Penilaian Moral</string>
    <string name="indicator_value_pekerti_hint">Klik untuk melihat indicator Penilaian Budi Pekerti</string>
    <string name="indicator_value_agama_hint">Klik untuk melihat Indicator Penilaian Agama</string>
    <string name="indicator_value_moral_hint">Klik untuk melihat Indicator Penilaian Moral</string>
    <string name="add_indicator" tools:ignore="UnusedResources">Tambahkan Indicator</string>
    <string name="week_1">Minggu ke 1</string>
    <string name="report_1">Laporan ke 1</string>
    <string name="create_report">pembuatan laporan</string>
    <string name="name_student">Nama siswa :</string>
    <string name="date">Tanggal</string>
    <string name="delete">Hapus</string>
    <string name="update" tools:ignore="UnusedResources">Ubah</string>
    <string name="ekspor_pdf">Ekspor ke PDF</string>
    <string name="category">Kategori :</string>
    <string name="point">Point :</string>
    <string name="report_month">Laporan bulan :</string>
    <string name="assesment">Narasi :</string>
    <string name="add_report_month">Tambah Laporan Bulanan</string>
    <string name="value_indicator_moral">Nilai indicator Moral</string>
    <string name="value_indicator_religious">Nilai indicator Agama</string>
    <string name="value_indicator_budi">Nilai Indicator Budi pekerti</string>
    <string name="weekly_report_details_from_student_named">Detail Laporan Perminggu Dari Siswa yang Bernama :</string>
    <string name="monthly_progress_report_list_for_child_named">Daftar Laporan Perkembangan Bulanan Anak yang Bernama :</string>
    <string name="report_monthan">Laporan Bulanan</string>
    <string name="week_1_report_1">Minggu ke 1, Laporan ke 1</string>
    <string name="edit">Ubah</string>
    <string name="text_amount_student">Jumlah siswa</string>
    <string-array name="week">
        <item>Minggu ke 1</item>
        <item>Minggu ke 2</item>
        <item>Minggu ke 3</item>
        <item>Minggu ke 4</item>
    </string-array>
    <string-array name="report">
        <item>Laporan ke 1</item>
        <item>Laporan ke 2</item>
        <item>Laporan ke 3</item>
        <item>Laporan ke 4</item>
        <item>Laporan ke 5</item>
    </string-array>
    <string-array name="agama">
        <item>1. Anak patuh dalam melaksanakan ajaran agama yang dianutnya</item>
        <item>2. Anak dapat melaksanakan ibadah tepat waktu</item>
        <item>3. Anak dapat berdoa sebelum atau sesudah melaksanakan sesuatu</item>
        <item>4. Anak dapat mengajak teman berdoa saat melaksanakan kegiatan</item>
        <item>5. Anak dapat mengingatkan teman untuk selalu berdoa</item>
        <item>6. Anak tidak dapat mengganggu teman yang sedang beribadah</item>
    </string-array>
    <string-array name="instruction">
        <item>1. Install Aplikasi Si-PAUD melalui Play Store</item>
        <item>2. Pada Onboarding Screen bacalah dengan teliti tentang pengenalan aplikasi</item>
        <item>3. Klik daftar, bagi yang belum memilik akun</item>
        <item>4. Lalu login dengan akun yang sudah di verifikasi</item>
        <item>5. Klik untuk mengetahui profil lembaga</item>
        <item>6. Klik untuk menambah nama peserta didik</item>
        <item>7. Klik tambahkan jika data peserta didik yang di input sudah benar</item>
        <item>8. Klik lalu isikan bulan penilaian</item>
        <item>9. Klik lalu pilih nama peserta didik yang akan di nilai</item>
        <item>10. Isikan hari dan tanggal saat melakukan penilaian</item>
        <item>11. Pilih dua indikator dari aspek perkembangan nilai agama, nilai moral dan nilai budi pekerti (Indikator tidak berubah selama satu bulan)</item>
        <item>12. Dinilai dengan mengobservasi dan pilih muncul atau tidak muncul dari setiap indikator </item>
        <item>13. Ambil foto anak di awal penilaian setiap minggunya </item>
        <item>14. Poin 10 sampai 13 dilakukan berulang ulang selama satu bulan dengan 20 kali penilaian (20 hari) pada setiap anak</item>
        <item>15. Klik untuk melihat resume penilaian harian menjadi penilaian bulanan</item>
        <item>16. Isikan narasi sesuai kesimpulan atau resume yang di peroleh (Misal BB, MB, BSH atau BSB)</item>
        <item>17. Download hasil resume dan simpan atau print untuk dapat di informasikan perkembangan anak kepada orang tua, rekan guru maupun kepala sekolah</item>
        <item>18. Lakukan pada bulan berikutnya dengan indikator yang berbeda dan cara yang sama</item>
        <item>19. Selamat mencoba</item>

    </string-array>
    <string-array name="pekerti">
        <item>1. Anak dengan kesadaran sendiri mampu mengucapkan maaf jika berbuat salah</item>
        <item>2. Anak dengan kesadaran sendiri mampu mengucapkan minta tolong jika butuh bantuan</item>
        <item>3. Anak dengan kesadaran sendiri mampu mengucapkan permisi jika melewati orang lain</item>
        <item>4. Anak dengan kesadaran sendiri mampu gucapkan terima kasih jika menerima sesuatu</item>
        <item>5. Anak dengan kesadaran sendiri mampu mendengarkan orang lain berbicara</item>
    </string-array>
</resources>