<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.ui.LoginActivity">


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="1"
            android:padding="@dimen/dp15"
            android:background="@drawable/ic_background_gradient_cut">

            <TextView
                android:id="@+id/tittle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/welcome"
                style="@style/AppTheme.TextTittle"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:layout_marginTop="@dimen/dp25"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/subTittle"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:text="@string/welcome_message"
                style="@style/AppTheme.TextSubTittle"
                android:layout_marginTop="@dimen/dp10"
                android:textColor="@color/white"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tittle" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

        </LinearLayout>

    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/dp30"
        android:layout_marginStart="@dimen/dp30"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:cardElevation="@dimen/dp15"
        android:id="@+id/card"
        android:layout_marginBottom="150dp"
        app:cardCornerRadius="@dimen/dp15">


       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="match_parent"
           android:orientation="vertical"
           android:padding="@dimen/dp15">

           <com.google.android.material.textfield.TextInputLayout
               android:id="@+id/i_name_student"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:layout_marginTop="@dimen/dp25"
               android:layout_marginEnd="@dimen/dp5"
               android:layout_marginStart="@dimen/dp5"
               app:startIconDrawable="@drawable/ic_email"
               app:endIconMode="clear_text"
               app:errorEnabled="true"
               app:startIconTint="@color/primary_color"
               style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

               <com.google.android.material.textfield.TextInputEditText
                   android:id="@+id/et_name_student"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:hint="@string/hint_email"
                   android:inputType="textEmailAddress"
                   android:fontFamily="@font/poppins"
                   android:imeOptions="actionNext"
                   android:background="@drawable/background_stroke"/>

           </com.google.android.material.textfield.TextInputLayout>

           <com.google.android.material.textfield.TextInputLayout
               android:id="@+id/i_school_name"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:layout_marginTop="@dimen/dp5"
               android:layout_marginEnd="@dimen/dp5"
               android:layout_marginStart="@dimen/dp5"
               app:startIconDrawable="@drawable/ic_password"
               app:endIconMode="password_toggle"
               app:startIconTint="@color/primary_color"
               style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

               <com.google.android.material.textfield.TextInputEditText
                   android:id="@+id/et_school_name"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:hint="@string/hint_password"
                   android:inputType="text"
                   android:fontFamily="@font/poppins"
                   android:imeOptions="actionNext"
                   android:background="@drawable/background_stroke"/>

           </com.google.android.material.textfield.TextInputLayout>


           <com.google.android.material.button.MaterialButton
               android:id="@+id/btn_login"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:backgroundTint="@color/primary_color"
               android:fontFamily="@font/poppins"
               android:padding="@dimen/dp15"
               android:text="@string/login"
               android:layout_marginEnd="@dimen/dp15"
               android:layout_marginStart="@dimen/dp15"
               app:cornerRadius="@dimen/dp20"
               android:layout_marginTop="50dp"
               android:textAllCaps="false"
               android:layout_marginBottom="@dimen/dp15" />
       </LinearLayout>


    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="@dimen/dp5"
        android:layout_marginTop="@dimen/dp25"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/card">

        <TextView
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:text="@string/not_have_account"
            style="@style/AppTheme.TextSubTittle"
            android:layout_marginTop="@dimen/dp10"
            android:textAlignment="textEnd"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tittle"
            android:layout_weight="1"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="3">

            <TextView
                android:id="@+id/tv_register"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:text="@string/register"
                style="@style/AppTheme.TextSubTittle"
                android:layout_marginTop="@dimen/dp10"
                android:textAlignment="center"
                android:textStyle="bold"
                android:textColor="@color/primary_color"
                android:layout_weight="1"/>

            <TextView
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:text="@string/here"
                style="@style/AppTheme.TextSubTittle"
                android:layout_marginTop="@dimen/dp10"
                android:layout_weight="1"/>
        </LinearLayout>


    </LinearLayout>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/wm"
        style="@style/AppTheme.TextSubTittle"
        android:layout_marginBottom="@dimen/dp15"
        android:gravity="bottom"
        android:textAlignment="center"
        tools:ignore="RtlCompat"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>