<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_background_gradient"
    tools:context=".presentation.ui.RegisterActivity">

   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="match_parent"
       android:orientation="vertical">

       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="match_parent"
           android:orientation="vertical"
           android:padding="@dimen/dp15"
           android:layout_weight="4">


           <TextView
               android:id="@+id/tittle"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:text="@string/register"
               style="@style/AppTheme.TextTittle"
               android:textStyle="bold"
               android:textColor="@color/white"
               android:layout_marginTop="@dimen/dp20"
               app:layout_constraintEnd_toEndOf="parent"
               app:layout_constraintStart_toStartOf="parent"
               app:layout_constraintTop_toTopOf="parent" />

           <TextView
               android:id="@+id/subTittle"
               android:layout_width="250dp"
               android:layout_height="wrap_content"
               android:text="@string/register_message"
               style="@style/AppTheme.TextSubTittle"
               android:layout_marginTop="@dimen/dp10"
               android:textColor="@color/white"
               app:layout_constraintStart_toStartOf="parent"
               app:layout_constraintTop_toBottomOf="@id/tittle" />


       </LinearLayout>

       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="match_parent"
           android:background="@drawable/background_register"
           android:orientation="vertical"
           android:layout_weight="1"
           android:padding="@dimen/dp20">


           <com.google.android.material.textfield.TextInputLayout
               android:id="@+id/i_name_student"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:layout_marginTop="@dimen/dp25"
               android:layout_marginEnd="@dimen/dp5"
               android:layout_marginStart="@dimen/dp5"
               app:startIconDrawable="@drawable/ic_student"
               app:endIconMode="clear_text"
               app:hintEnabled="false"
               app:startIconTint="@color/primary_color"
               style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

               <com.google.android.material.textfield.TextInputEditText
                   android:id="@+id/et_email"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:hint="@string/hint_email"
                   android:inputType="textEmailAddress"
                   android:fontFamily="@font/poppins"
                   android:imeOptions="actionNext"
                   android:background="@drawable/background_stroke"/>

           </com.google.android.material.textfield.TextInputLayout>

           <com.google.android.material.textfield.TextInputLayout
               android:id="@+id/i_school_name"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:layout_marginTop="@dimen/dp15"
               android:layout_marginEnd="@dimen/dp5"
               android:layout_marginStart="@dimen/dp5"
               app:startIconDrawable="@drawable/ic_company"
               app:endIconMode="password_toggle"
               app:startIconTint="@color/primary_color"
               app:hintEnabled="false"
               style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

               <com.google.android.material.textfield.TextInputEditText
                   android:id="@+id/et_password"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:hint="@string/hint_password"
                   android:inputType="text"
                   android:fontFamily="@font/poppins"
                   android:imeOptions="actionNext"
                   android:background="@drawable/background_stroke"/>

           </com.google.android.material.textfield.TextInputLayout>


           <com.google.android.material.textfield.TextInputLayout
               android:id="@+id/i_group"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:layout_marginTop="@dimen/dp15"
               android:layout_marginEnd="@dimen/dp5"
               android:layout_marginStart="@dimen/dp5"
               app:hintEnabled="false"
               app:startIconDrawable="@drawable/ic_group"
               app:endIconMode="clear_text"
               app:startIconTint="@color/primary_color"
               style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

               <com.google.android.material.textfield.TextInputEditText
                   android:id="@+id/et_school"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:hint="@string/hint_school"
                   android:inputType="text"
                   android:fontFamily="@font/poppins"
                   android:imeOptions="actionDone"
                   android:background="@drawable/background_stroke"
                   />

           </com.google.android.material.textfield.TextInputLayout>

           <com.google.android.material.button.MaterialButton
               android:id="@+id/btn_register"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:backgroundTint="@color/primary_color"
               android:fontFamily="@font/poppins"
               android:padding="@dimen/dp15"
               android:text="@string/register"
               android:layout_marginEnd="@dimen/dp15"
               android:layout_marginStart="@dimen/dp15"
               app:cornerRadius="@dimen/dp20"
               android:layout_marginTop="100dp"
               android:textAllCaps="false"
               android:layout_marginBottom="@dimen/dp15" />

           <LinearLayout
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:orientation="horizontal"
               android:gravity="center_horizontal"
               android:layout_marginStart="@dimen/dp15"
               android:layout_marginEnd="@dimen/dp5"
               android:layout_gravity="center_horizontal">

               <TextView
                   android:layout_width="240dp"
                   android:layout_height="wrap_content"
                   android:text="@string/have_account"
                   style="@style/AppTheme.TextSubTittle"
                   android:layout_marginTop="@dimen/dp10"
                   android:textAlignment="textEnd"
                   app:layout_constraintStart_toStartOf="parent"
                   app:layout_constraintTop_toBottomOf="@id/tittle"
                   android:layout_weight="1"/>

               <LinearLayout
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:orientation="horizontal"
                   android:layout_marginStart="@dimen/dp5"
                   android:layout_weight="3">

                   <TextView
                       android:id="@+id/tv_login"
                       android:layout_width="200dp"
                       android:layout_height="wrap_content"
                       android:text="@string/login"
                       style="@style/AppTheme.TextSubTittle"
                       android:layout_marginTop="@dimen/dp10"
                       android:textAlignment="textEnd"
                       android:textStyle="bold"
                       android:textColor="@color/primary_color"
                       android:layout_marginEnd="@dimen/dp5"
                       android:layout_weight="1"/>

                   <TextView
                       android:layout_width="250dp"
                       android:layout_height="wrap_content"
                       android:text="@string/here"
                       style="@style/AppTheme.TextSubTittle"
                       android:layout_marginTop="@dimen/dp10"
                       android:layout_weight="1"/>
               </LinearLayout>


           </LinearLayout>

           <TextView
               android:layout_width="match_parent"
               android:layout_height="match_parent"
               android:text="@string/wm"
               style="@style/AppTheme.TextSubTittle"
               android:gravity="bottom"
               android:textAlignment="center"
               tools:ignore="RtlCompat" />

       </LinearLayout>

   </LinearLayout>

    <RelativeLayout
        android:id="@+id/loadingPanel"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center">

        <LinearLayout
            android:id="@+id/loadingBg"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:alpha="0.8"
            android:visibility="gone"
            android:background="#000000"
            android:orientation="horizontal" />

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/loading"
            android:layout_width="300dp"
            android:layout_height="300dp"
            android:layout_marginTop="150dp"
            android:scaleType="centerCrop"
            app:lottie_rawRes="@raw/motion_loading"
            app:lottie_loop="true"
            android:visibility="gone"
            app:lottie_autoPlay="true"
            android:layout_marginBottom="50dp"
            android:layout_centerInParent="true"
            />

    </RelativeLayout>



</FrameLayout>